Freedom Sanbox Ant Deploy/src/objects/Global_Assumptions_For_Freedom__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Global Assumptions For Freedom</description>
    <fields>
        <fullName>Default_Estimated_Life_Expectancy__c</fullName>
        <description>Stores Default Estimated Life Expectancy of Freedom</description>
        <label>Default Estimated Life Expectancy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Retirement_Age__c</fullName>
        <description>Default Retirement Age of Freedom</description>
        <label>Default Retirement Age</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Return_on_Investment__c</fullName>
        <description>Expected Return on Investment of Freedom</description>
        <label>Expected Return on Investment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Income_Growth_Rate__c</fullName>
        <description>Income Growth Rate of Freedom</description>
        <label>Income Growth Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inflation_Rate__c</fullName>
        <description>Inflation Rate of Freedom</description>
        <label>Inflation Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_Of_Months__c</fullName>
        <description>Number Of Months of Freedom</description>
        <label>Number Of Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Global Assumptions For Freedom</label>
</CustomObject>